--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Preview</title>
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden;">
-  <iframe src="https://preview--fit-freight.lovable.app/" style="width: 100%; height: 100vh; border: none;"></iframe>
+  <iframe src="" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
