--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Preview</title>
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden;">
-  <iframe src="https://lovable.dev/projects/6602f8b7-68b2-4c01-9717-2adc7fba273b" style="width: 100%; height: 100vh; border: none;"></iframe>
+  <iframe src="https://preview--dubai-freelance-clone-magic.lovable.app/" style="width: 100%; height: 100vh; border: none;"></iframe>
 </body>
 </html>
